--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "node-streaming-socketio",
-  "version": "0.0.2",
-  "engines": {
-    "node": "0.8.x",
-    "npm":  "1.1.x"
-  },
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.9.0",
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "hjs": "~0.0.6",
-    "socket.io": "*",
-    "nforce" : "*"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "hbs": "~3.1.0",
+    "morgan": "~1.6.1",
+    "nforce": "^1.5.0",
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8"
   }
 }
